--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>slider</title>
-        <link rel="stylesheet" href="css/index.css">
-        <link rel="stylesheet" href="css/slider.css">
+        <link rel="stylesheet" href="src/css/index.css">
+        <!-- <link rel="stylesheet" href="css/slider.css"> -->
     </head>
     <body>
         <div id="sliderWrap">
@@ -24,7 +24,7 @@
             </ul>
         </div>
     </body>
-    <script src="js/jquery.js" charset="utf-8"></script>
-    <script src="js/jquery.slider.js" charset="utf-8"></script>
-    <script src="js/index.js" charset="utf-8"></script>
+    <script src="dist/js/jquery.js" charset="utf-8"></script>
+    <script src="dist/js/jquery.slider.js" charset="utf-8"></script>
+    <script src="src/js/index.js" charset="utf-8"></script>
 </html>
