change style resource url

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>slider</title>
-        <link rel="stylesheet" href="src/css/index.css">
+        <link rel="stylesheet" href="dist/css/index.css">
     </head>
     <body>
         <div id="sliderWrap">
