config webpack to use multiple entry point

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                 </li>
             </ul>
         </div>
+        
+        <script src="dist/js/jquery.js" charset="utf-8"></script>
+        <script src="dist/js/jquery.slider.js" charset="utf-8"></script>
+        <script src="dist/js/index.js" charset="utf-8"></script>
     </body>
-    <script src="dist/js/jquery.js" charset="utf-8"></script>
-    <script src="dist/js/jquery.slider.js" charset="utf-8"></script>
-    <script src="src/js/index.js" charset="utf-8"></script>
 </html>
